force-app/main/default/objects/Search__c/Search__c.object-meta.xml
<CustomObject>
    <description>Using for Prospect / Customer search</description>
    <label>Search</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Search Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Search</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>