force-app/main/default/objects/Search__c/fields/Customer_Type_Temp__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type_Temp__c</fullName>
    <description>Type of customer on search layout</description>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Juristic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>