force-app/main/default/objects/Search__c/fields/First_name__c.field-meta.xml
<CustomField>
    <fullName>First_name__c</fullName>
    <description>Company name / First name  on Search layout</description>
    <encryptionScheme>None</encryptionScheme>
    <label>First Name / Company name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>