force-app/main/default/objects/Search__c/fields/ID_Number_Temp__c.field-meta.xml
<CustomField>
    <fullName>ID_Number_Temp__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ID Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>