force-app/main/default/objects/Search__c/fields/Last_name__c.field-meta.xml
<CustomField>
    <fullName>Last_name__c</fullName>
    <description>Last name on Search layout</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Last name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>