force-app/main/default/objects/Search__c/fields/Mobile_Number_Temp__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Number_Temp__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mobile Phone No.</label>
    <length>18</length>
    <type>Text</type>
</CustomField>