force-app/main/default/objects/Search__c/fields/TMB_Customer_ID_Temp__c.field-meta.xml
<CustomField>
    <fullName>TMB_Customer_ID_Temp__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TMB Customer ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>